Update dependencies and parse HTML to find feeds.
Will need more work. Currently only works for a single feed with no
option to select between multiple feeds.

--- a/frontend/app/admin/add-dialog/add-dialog.component.html
+++ b/frontend/app/admin/add-dialog/add-dialog.component.html
@@ -26,6 +26,13 @@
                  placeholder="Title Override"
                  matTooltip="Override the automatically detected title of the feed. Optional.">
         </mat-form-field>
+        <div>
+          <mat-checkbox [formControl]="feedForm.get('force')"
+                        name="force"
+                        matTooltip="Force adding a new feed even if it can't be validated.">
+            Force
+          </mat-checkbox>
+        </div>
         <div align="right">
           <button mat-button
                   mat-dialog-close>
