--- a/frontend/app/main-view/main-view/main-view.component.html
+++ b/frontend/app/main-view/main-view/main-view.component.html
@@ -1,4 +1,4 @@
-<awrss-main-view-header *ngIf="!(mobile | async)"
+<awrss-main-view-header *ngIf="(mobile | async) !== true"
                         class="header"
                         [mobile]="false"
                         [feed]="feed"
