Add rerun feed/rerun failing feeds.

--- a/frontend/app/admin/index/index.component.html
+++ b/frontend/app/admin/index/index.component.html
@@ -15,5 +15,12 @@
         Feeds
       </a>
     </mat-list-item>
+    <mat-list-item>
+      <button class="rerun-button"
+              (click)="rerunFailingFeeds()"
+              matTooltip="Rerun all failing feeds now">
+        Rerun failing feeds
+      </button>
+    </mat-list-item>
   </mat-list>
 </awrss-admin-body>
