--- a/frontend/app/main-view/item/item.component.scss
+++ b/frontend/app/main-view/item/item.component.scss
@@ -1,3 +1,4 @@
+@use '@angular/material' as mat;
 @import 'variables';
 
 :host {
@@ -11,7 +12,7 @@
   }
 
   &.item-hover:hover {
-    background-color: mat-color($primary, 500);
+    background-color: mat.get-color-from-palette($primary, 500);
   }
 }
 
