Fix some more broken styling from updating material

--- a/frontend/app/admin/add-dialog/add-dialog.component.html
+++ b/frontend/app/admin/add-dialog/add-dialog.component.html
@@ -33,7 +33,8 @@
             Force
           </mat-checkbox>
         </div>
-        <div align="right">
+        <div class="tab-actions"
+             align="right">
           <button mat-button
                   mat-dialog-close>
             Cancel
@@ -94,7 +95,8 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-        <div align="right">
+        <div class="tab-actions"
+             align="right">
           <button mat-button
                   mat-dialog-close>
             Cancel
