--- a/frontend/app/admin/category-admin/category-admin.component.html
+++ b/frontend/app/admin/category-admin/category-admin.component.html
@@ -4,38 +4,39 @@
 
 <awrss-admin-body>
   <mat-list class="categories">
-    <mat-list-item class="category"
-                   *ngFor="let cat of sortedCategories; let even = even; let odd = odd;"
+    <mat-list-item *ngFor="let cat of sortedCategories; let even = even; let odd = odd;"
                    [class.primary-bg]="odd"
                    [class.secondary-bg]="even">
-      <a class="title"
-         [matTooltip]="cat.title"
-         routerLink="/category/{{cat.name}}">
-        {{cat.title}}
-      </a>
-      <div class="spacer"></div>
-      <button class="up-button"
-              (click)="moveCategory(cat.id, 'up')"
-              matTooltip="Move the {{cat.title}} category earlier in the list."
-              mat-icon-button>
-        <mat-icon>arrow_upward</mat-icon>
-      </button>
-      <button class="down-button"
-              (click)="moveCategory(cat.id, 'down')"
-              matTooltip="Move the {{cat.title}} category later in the list."
-              mat-icon-button>
-        <mat-icon>arrow_downward</mat-icon>
-      </button>
-      <button class="disable-button"
-              (click)="disableCategory(cat)"
-              matTooltip="Delete the {{cat.title}} category"
-              mat-icon-button>
-        <mat-icon>delete_forever</mat-icon>
-      </button>
-      <button (click)="editCategory(cat)"
-              mat-icon-button>
-        <mat-icon>edit</mat-icon>
-      </button>
+      <span class="category">
+        <a class="title"
+           [matTooltip]="cat.title"
+           routerLink="/category/{{cat.name}}">
+          {{cat.title}}
+        </a>
+        <div class="spacer"></div>
+        <button class="up-button"
+                (click)="moveCategory(cat.id, 'up')"
+                matTooltip="Move the {{cat.title}} category earlier in the list."
+                mat-icon-button>
+          <mat-icon>arrow_upward</mat-icon>
+        </button>
+        <button class="down-button"
+                (click)="moveCategory(cat.id, 'down')"
+                matTooltip="Move the {{cat.title}} category later in the list."
+                mat-icon-button>
+          <mat-icon>arrow_downward</mat-icon>
+        </button>
+        <button class="disable-button"
+                (click)="disableCategory(cat)"
+                matTooltip="Delete the {{cat.title}} category"
+                mat-icon-button>
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+        <button (click)="editCategory(cat)"
+                mat-icon-button>
+          <mat-icon>edit</mat-icon>
+        </button>
+      </span>
     </mat-list-item>
   </mat-list>
 </awrss-admin-body>
