--- a/frontend/app/admin/edit-feed-dialog/edit-feed-dialog.component.scss
+++ b/frontend/app/admin/edit-feed-dialog/edit-feed-dialog.component.scss
@@ -2,7 +2,7 @@ mat-dialog-content {
   display: flex;
   flex-direction: column;
   overflow: visible;
-  padding: 0px 24px !important;
+  padding: 0px 24px 20px 24px !important;
 }
 
 button {
