Implement showing read items for categories. It's a bit clumsy but it works.

--- a/frontend/app/main-view/main-view/main-view.component.html
+++ b/frontend/app/main-view/main-view/main-view.component.html
@@ -27,7 +27,7 @@
   </awrss-item>
 
   <div class="show-more primary-dark-bg"
-       *ngIf="feed && !hasAllRead">
+       *ngIf="(feed || category) && !hasAllRead">
     <button [disabled]="loadingMore"
             *ngIf="!hasRead"
             (click)="showRead()"
