Show read for all feeds and purge read items daily.
A few rough edges, like if you fetch read for all feeds or a category
and some feeds have no read items in that range, it can make require two
clicks to show any items.

--- a/frontend/app/main-view/main-view/main-view.component.html
+++ b/frontend/app/main-view/main-view/main-view.component.html
@@ -27,7 +27,7 @@
   </awrss-item>
 
   <div class="show-more primary-dark-bg"
-       *ngIf="(feed || category) && !hasAllRead">
+       *ngIf="!hasAllRead">
     <button [disabled]="loadingMore"
             *ngIf="!hasRead"
             (click)="showRead()"
