--- a/frontend/app/nav/nav/nav.component.scss
+++ b/frontend/app/nav/nav/nav.component.scss
@@ -106,6 +106,23 @@
       &.active {
         background-color: white !important;
       }
+
+      &.failing {
+        background-color: mat.get-color-from-palette($warn, darker) !important;
+
+        .link,
+        .unread {
+          color: white !important;
+        }
+      }
+
+      &.active.failing {
+
+        .link,
+        .unread {
+          color: black !important;
+        }
+      }
     }
 
     &.failing .unread {
@@ -117,12 +134,13 @@
 
       .link,
       .unread {
-        color: black;
+        color: black !important;
       }
 
       &.failing {
         background-color: mat.get-color-from-palette($warn, darker);
 
+        .link,
         .unread {
           color: white;
         }
