--- a/frontend/app/main-view/main-view/main-view.component.html
+++ b/frontend/app/main-view/main-view/main-view.component.html
@@ -3,8 +3,7 @@
                         [mobile]="false"
                         [feed]="feed"
                         [category]="category"
-                        [maxItemId]="maxItemId"
-                        (fuzzyFilterString)="handleFuzzy($event)">
+                        [maxItemId]="maxItemId">
 </awrss-main-view-header>
 
 <div class="viewport"
