Only disable the mark all read button when there are no unread items in a single feed view

--- a/frontend/app/main-view/main-view/header.component.html
+++ b/frontend/app/main-view/main-view/header.component.html
@@ -27,8 +27,8 @@
   </mat-form-field>
   <button class="read-button"
           (click)="markFeedAsRead()"
-          *ngIf="feed && maxItemId !== undefined"
-          [disabled]="!!fuzzyString"
+          *ngIf="feed"
+          [disabled]="!!fuzzyString || maxItemId === undefined"
           matTooltip="Mark all items read"
           mat-icon-button>
     <mat-icon>archive</mat-icon>
