Minor tweaks to spacing

--- a/frontend/app/admin/edit-feed-dialog/edit-feed-dialog.component.html
+++ b/frontend/app/admin/edit-feed-dialog/edit-feed-dialog.component.html
@@ -1,6 +1,4 @@
-<h2 mat-dialog-title>
-  {{ feed | feedTitle }}
-</h2>
+<h2 mat-dialog-title>{{feed | feedTitle}}</h2>
 <form [formGroup]="feedForm"
       (ngSubmit)="submit(feedForm.value)"
       autocomplete="off"
