--- a/frontend/app/admin/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/app/admin/confirmation-dialog/confirmation-dialog.component.html
@@ -1,6 +1,4 @@
-<h2 mat-dialog-title>
-  {{data.title}}
-</h2>
+<h2 mat-dialog-title>{{data.title}}</h2>
 <mat-dialog-content>
   <p *ngFor="let line of text">{{line}}</p>
 </mat-dialog-content>
