--- a/frontend/app/admin/edit-category-dialog/edit-category-dialog.component.html
+++ b/frontend/app/admin/edit-category-dialog/edit-category-dialog.component.html
@@ -1,6 +1,4 @@
-<h2 mat-dialog-title>
-  {{ category.title }}
-</h2>
+<h2 mat-dialog-title>{{ category.title }}</h2>
 <form [formGroup]="categoryForm"
       (ngSubmit)="submit(categoryForm.value)"
       autocomplete="off"
