Allow marking as read while fuzzy filtering.
Currently a rather arbitrary limit of 500 items. Sqlite should be able
to handle ~32k, but that seems unnecessary. Still only for indiviudal
feeds but it'll be easy to relax that.

--- a/frontend/app/admin/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/app/admin/confirmation-dialog/confirmation-dialog.component.html
@@ -8,6 +8,8 @@
     Cancel
   </button>
   <button mat-button
+          [disabled]="disabled"
+          [color]="data.dangerous ? 'warn' : ''"
           [mat-dialog-close]="true">
     Confirm
   </button>
