--- a/frontend/app/main-view/main-view/main-view.component.html
+++ b/frontend/app/main-view/main-view/main-view.component.html
@@ -3,7 +3,8 @@
                         [mobile]="false"
                         [feed]="feed"
                         [category]="category"
-                        [maxItemId]="maxItemId">
+                        [enableMarkAsRead]="enableMarkAsRead"
+                        (markAsRead)="markAsRead()">
 </awrss-main-view-header>
 
 <div class="viewport"
