--- a/frontend/app/admin/index/index.component.html
+++ b/frontend/app/admin/index/index.component.html
@@ -5,13 +5,13 @@
   <mat-list class="admin-pages">
     <mat-list-item>
       <a routerLink="categories"
-         class="mat-headline">
+         class="mat-headline-5">
         Categories
       </a>
     </mat-list-item>
     <mat-list-item>
       <a routerLink="feeds"
-         class="mat-headline">
+         class="mat-headline-5">
         Feeds
       </a>
     </mat-list-item>
