--- a/frontend/app/nav/feed/feed.component.html
+++ b/frontend/app/nav/feed/feed.component.html
@@ -2,7 +2,7 @@
      [class.failing]="fd.feed.failingSince"
      [class.disabled]="fd.feed.disabled"
      routerLinkActive="active">
-  <a class="link mat-subheading-1"
+  <a class="link mat-body-1"
      routerLink="/feed/{{fd.feed.id}}"
      draggable="false"
      ondragstart="return false;">
