--- a/frontend/app/nav/feed/feed.component.scss
+++ b/frontend/app/nav/feed/feed.component.scss
@@ -27,12 +27,17 @@
 
 .unread {
   margin-left: 4px;
+  font-size: 15px;
+  letter-spacing: normal;
 }
 
 .title {
   overflow: hidden;
   text-overflow: ellipsis;
   flex: 1 1 auto;
+
+  font-size: 15px;
+  letter-spacing: normal;
 }
 
 .active {
