--- a/frontend/theme.scss
+++ b/frontend/theme.scss
@@ -1,6 +1,12 @@
 @use '@angular/material' as mat;
 @import 'variables';
 
+// :root {
+//   @include mat.button-overrides(( // This isn't safe for internationalization
+//       text-label-text-transform: uppercase,
+//     ));
+// }
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
@@ -11,8 +17,9 @@
 // that you are using.
 @include mat.core-theme($theme);
 @include mat.all-component-themes($theme);
-@include mat.all-legacy-component-themes($theme);
-@include mat.all-legacy-component-typographies();
+@include mat.all-component-typographies($theme);
+// @include mat.all-legacy-component-themes($theme);
+// @include mat.all-legacy-component-typographies();
 
 
 @mixin awrss-theme($theme) {
@@ -20,6 +27,9 @@
   $primary: map-get($theme, primary);
   $accent: map-get($theme, accent);
   $warn: map-get($theme, warn);
+
+  // This isn't safe for internationalization
+  //$mdc-text-button-label-text-transform: uppercase;
 
   // Create theme specfic styles
   .primary-bg {
